We need STRINGS_H_DECLARES_FFS in config.h with CMake.
It's used, and it's put into config.h with autotools.

--- a/cmakeconfig.h.in
+++ b/cmakeconfig.h.in
@@ -303,6 +303,9 @@
 /* Define to 1 if you have the ANSI C header files. */
 #cmakedefine STDC_HEADERS 1
 
+/* Define to 1 if strings.h declares `ffs' */
+#cmakedefine STRINGS_H_DECLARES_FFS 1
+
 /* Define to 1 if sys/ethernet.h declares `ether_hostton' */
 #cmakedefine SYS_ETHERNET_H_DECLARES_ETHER_HOSTTON 1
 
