Set variables to the DAG include and lib directories, and use them.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -987,33 +987,35 @@ if(NOT DISABLE_DAG)
     #
     # Do we have the dagapi.h header?
     #
+    set(DAG_INCLUDE_DIR "${DAG_ROOT}/include")
     cmake_push_check_state()
-    set(CMAKE_REQUIRED_INCLUDES ${DAG_ROOT}/include)
+    set(CMAKE_REQUIRED_INCLUDES ${DAG_INCLUDE_DIR})
     check_include_file(dagapi.h HAVE_DAGAPI_H)
     cmake_pop_check_state()
     if(HAVE_DAGAPI_H)
         #
         # Yes.
         #
-        include_directories(AFTER ${DAG_ROOT}/include)
+        include_directories(AFTER ${DAG_INCLUDE_DIR})
         set(PROJECT_SOURCE_LIST_C ${PROJECT_SOURCE_LIST_C} pcap-dag.c)
         set(HAVE_DAG_API TRUE)
 
         #
         # Check for various DAG API functions.
         #
-        check_library_exists(dag dag_attach_stream ${DAG_ROOT}/lib HAVE_DAG_STREAMS_API)
+        set(DAG_LIB_DIR ${DAG_ROOT}/lib)
+        check_library_exists(dag dag_attach_stream ${DAG_LIB_DIR} HAVE_DAG_STREAMS_API)
         if(NOT HAVE_DAG_STREAMS_API)
             message(FATAL_ERROR "DAG library lacks streams support")
         endif()
-        check_library_exists(dag dag_attach_stream64 ${DAG_ROOT}/lib HAVE_DAG_LARGE_STREAMS_API)
-        check_library_exists(dag dag_get_erf_types ${DAG_ROOT}/lib HAVE_DAG_GET_ERF_TYPES)
-        check_library_exists(dag dag_get_stream_erf_types ${DAG_ROOT}/lib HAVE_DAG_GET_STREAM_ERF_TYPES)
+        check_library_exists(dag dag_attach_stream64 ${DAG_LIB_DIR} HAVE_DAG_LARGE_STREAMS_API)
+        check_library_exists(dag dag_get_erf_types ${DAG_LIB_DIR} HAVE_DAG_GET_ERF_TYPES)
+        check_library_exists(dag dag_get_stream_erf_types ${DAG_LIB_DIR} HAVE_DAG_GET_STREAM_ERF_TYPES)
         set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} dag)
-        link_directories(${DAG_ROOT}/lib)
+        link_directories(${DAG_LIB_DIR})
 
         if(HAVE_DAG_LARGE_STREAMS_API)
-            check_library_exists(vdag vdag_set_device_info ${DAG_ROOT}/lib HAVE_DAG_VDAG)
+            check_library_exists(vdag vdag_set_device_info ${DAG_LIB_DIR} HAVE_DAG_VDAG)
             if(HAVE_DAG_VDAG)
                 set(PCAP_LINK_LIBRARIES ${PCAP_LINK_LIBRARIES} pthread)
             endif()
