It's "USB capture support", not "nusb support", whatever that might be.

--- a/configure.ac
+++ b/configure.ac
@@ -1503,7 +1503,7 @@ AC_SUBST(RPCAPD)
 AC_SUBST(INSTALL_RPCAPD)
 
 AC_ARG_ENABLE([usb],
-[AC_HELP_STRING([--enable-usb],[enable nusb support @<:@default=yes, if support available@:>@])],
+[AC_HELP_STRING([--enable-usb],[enable USB capture support @<:@default=yes, if support available@:>@])],
     [],
     [enable_usb=yes])
 
