--- a/config.h.in
+++ b/config.h.in
@@ -48,6 +48,9 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
+/* Define to 1 if you have the `dag' library (-ldag). */
+#undef HAVE_LIBDAG
+
 /* if libdlpi exists */
 #undef HAVE_LIBDLPI
 
